# tesseract-static-rs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  build.rs
.cargo/: config
.github/workflows/: build.yaml
example/: Cargo.toml  build.rs
example/src/: main.rs
examples/: main.rs  simple.rs
rebuild-tesseract/: Cargo.toml  build.rs
rebuild-tesseract/src/: leptonica-CmakeLists.txt  main.rs
src/: dl.rs  lib.rs  main.rs  parse.rs
src/leptonica_plumbing/: borrowed_box.rs  borrowed_pix.rs  box.rs  boxa.rs  lib.rs  mod.rs  pix.rs  pixa.rs
src/leptonica_sys/: bindings.rs  lib.rs
src/libtesseract_rs/: mod.rs
src/tesseract_plumbing/: lib.rs  mod.rs  tess_base_api.rs  text.rs
src/tesseract_sys/: capi_bindings.rs  lib.rs  public_types_bindings.rs
tesseract-static/: Cargo.toml  build.rs
tesseract-static-build/: Cargo.toml
tesseract-static-build/src/: lib.rs
tesseract-static-example/: Cargo.toml  build.rs
tesseract-static-example/src/: main.rs  parse.rs
tesseract-static/src/leptonica_sys/: lib.rs
tesseract-static/src/libtesseract_rs/: mod.rs
tesseract-static/src/tesseract_plumbing/: tess_base_api.rs
