[package]
name = "tesseract-static"
version = "0.1.0"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
description = "STATICALLY LINKED tesseract + leptonica bindings for easy inclusion of tesseract-ocr in binary applications"
license = "Apache-2.0"
keywords = ["tesseract", "leptonica", "ocr", "text-recognition"]
categories = ["computer-vision"]
edition = "2021"
build = "build.rs"
exclude = ["testocr.pnm", "deu.traineddata", "eng.traineddata"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.140"
rayon = "1.7.0"
thiserror = "1.0.39"

[target.'cfg(not(target_os = "linux"))'.dependencies]
link-cplusplus = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
link-cplusplus = { version = "1.0", features = ["libstdc++"] }

[build-dependencies]
# bindgen = "0.64.0"
cmake = "0.1.49"
fs_extra = "1.3.0"
flate2 = "1.0.25"
tar = "0.4.38"
reqwest = { version = "0.11.14", features = ["blocking"] }
