[package]
name = "tesseract-static"
version = "0.2.1"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
description = "STATICALLY LINKED tesseract + leptonica bindings for easy inclusion of tesseract-ocr in binary applications"
license = "Apache-2.0"
keywords = ["tesseract", "leptonica", "ocr", "text-recognition"]
categories = ["computer-vision"]
edition = "2021"
exclude = ["testocr.pnm", "deu.traineddata", "eng.traineddata"]
build = "build.rs"

[dependencies]
dlopen = "0.1.8"
kuchiki = { version = "0.8.1", optional = true }
serde_json = { version = "1", optional = true }
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }
thiserror = "2.0.11"
libc = "0.2.169"
lazy_static = "1.5.0"

[build-dependencies]
reqwest = { version = "0.11.14", features = ["blocking"] }

[features]
default = ["parse"]
parse = ["kuchiki", "serde_json", "serde_derive", "serde"]
disable_avx = []
