
[package]
name = "tesseract-static-build"
version = "0.1.0"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
description = "Builds tesseract and leptonica"
license = "Apache-2.0"
keywords = ["tesseract", "leptonica", "ocr", "text-recognition"]
categories = ["computer-vision"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmake = "0.1.49"
fs_extra = "1.3.0"
flate2 = "1.0.25"
tar = "0.4.38"
reqwest = { version = "0.11.14", features = ["blocking"] }
