
[package]
name = "tesseract-static-example"
version = "0.1.0"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
description = "Example to test that tesseract / leptonica works"
license = "Apache-2.0"
keywords = ["tesseract", "leptonica", "ocr", "text-recognition"]
categories = ["computer-vision"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tesseract-static = { path = "../tesseract-static" }
rayon = "*"
kuchiki = "*"
serde_json = "*"
serde = "*"
serde_derive = "*"

[build-dependencies]
tesseract-static-build = { path = "../tesseract-static-build" }
