[package]
name = "tesseract-static"
version = "0.1.0"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
description = "STATICALLY LINKED tesseract + leptonica bindings for easy inclusion of tesseract-ocr in binary applications"
license = "Apache-2.0"
keywords = ["tesseract", "leptonica", "ocr", "text-recognition"]
categories = ["computer-vision"]
edition = "2021"
exclude = ["testocr.pnm", "deu.traineddata", "eng.traineddata"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.140"
rayon = "1.7.0"
thiserror = "1.0.39"
link-cplusplus = "1.0"

[build-dependencies]
# bindgen = "0.64.0"